[gd_scene load_steps=2 format=3 uid="uid://dx1xspawun6rt"]

[ext_resource type="Script" uid="uid://din31j8ene7cm" path="res://scripts/HyperspaceMap.gd" id="1_8ufwo"]

[node name="HyperspaceMap" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_8ufwo")

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 450.0
offset_right = 800.0
offset_bottom = 600.0

[node name="VBox" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="InfoLabel" type="Label" parent="InfoPanel/VBox"]
layout_mode = 2

[node name="JumpButton" type="Button" parent="InfoPanel/VBox"]
layout_mode = 2
text = "JUMP"

[node name="CancelButton" type="Button" parent="InfoPanel/VBox"]
layout_mode = 2
text = "CANCEL"
